--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,5 +1,8 @@
 server:
   port: 8082
+  servlet :
+    context-path : /api
+
 
 spring:
   datasource:
@@ -7,3 +10,6 @@ spring:
     url: jdbc:mysql://localhost:3306/springbootapp
     username: root
     password: 1234567@
+logging :
+  level :
+    org.springframework.web : DEBUG
